# plate

./: .gitignore  DESIGN  README.md  TODO  acinclude.m4  autogen.sh  configure.ac
include/: console.h  display.h  plate.h  platecommon.h  shader.h  texture.h  tilelayer.h  tileset.h  vec2.h
include/glad/: glad.h
shaders/: frag-tojimap.glsl  vert-tojimap.glsl
src/: Makefile.am  console.cpp  display.cpp  display.h  glad.c  main.cpp  oglconsole.c  plate.cpp  plate.h  platecommon.h  shader.cpp  texture.cpp  texture.h  tilelayer.cpp  tilelayer.h  tileset.cpp  tileset.h  vec2.cpp
