AC_INIT([PLATform Engine], 0.0.1)

AC_PREREQ([2.65])

AM_INIT_AUTOMAKE([1.9])
AC_PROG_CXX
AC_HEADER_STDC

dnl AX GL/GLU
AX_CHECK_GL
AX_CHECK_GLU

dnl SDL Check roughly as wiki states

SDL_VERSION=2.0.0
AM_PATH_SDL2($SDL_VERSION,
	:,
	AC_MSG_ERROR([*** SDL Version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS $GL_CFLAGS $GLU_CFLAGS"
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS $GL_CFLAGS $GLU_CFLAGS"
LIBS="$LIBS $SDL_LIBS $GL_LIBS $GLU_LIBS"

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
