AC_INIT([PLATform Engine], 0.0.1)

AC_PREREQ([2.65])

AM_INIT_AUTOMAKE([1.9])
AC_PROG_CXX
AC_HEADER_STDC
AX_CXX_COMPILE_STDCXX_11

AC_SEARCH_LIBS([dlopen], [dl dld], [], [
	AC_MSG_ERROR([unable to find the dlopen() function])
])

dnl AX GL
AX_CHECK_GL

dnl SDL Check roughly as wiki states

SDL_VERSION=2.0.0
AM_PATH_SDL2($SDL_VERSION,
	:,
	AC_MSG_ERROR([*** SDL Version $SDL_VERSION not found!])
)

PKG_CHECK_MODULES([SDLIMAGE],[SDL2_image])

CFLAGS="$CFLAGS $SDL_CFLAGS $GL_CFLAGS $GLU_CFLAGS $SDLIMAGE_CFLAGS"
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS $GL_CFLAGS $GLU_CFLAGS $SDLIMAGE_CFLAGS"
LIBS="$LIBS $SDL_LIBS $GL_LIBS $GLU_LIBS $SDLIMAGE_LIBS"

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/Makefile])
AC_OUTPUT
